[package]
name = "transaction-engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rust_decimal = "1.17"
rust_decimal_macros = "1.17"

[dev-dependencies]
hamcrest = "*"

[features]
default=["simple"]
simple = []
extended = []
